--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cargotest"
+name = "minesweeper"
 version = "0.1.0"
 authors = ["João Paiva <jgpaiva@gmail.com>"]
 edition = "2018"
