--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,21 @@ edition = "2018"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
-[features]
-default = ["console_error_panic_hook"]
+[workspace]
+members = [
+  "lib_minesweeper"
+]
+
+[dependencies.lib_minesweeper]
+path = "lib_minesweeper"
 
 [dependencies]
-colored = "1.9.3"
+lazy_static = "1.4.0"
 wasm-bindgen = "0.2.60"
 log = "0.4.8"
 
 js-sys = "0.3.32"
 gloo = "0.2.0"
-lazy_static = "1.4.0"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -40,14 +44,6 @@ features = ["log"]
 version = "0.1.14"
 features = ["wasm-bindgen"]
 
-[profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
-
-[dev-dependencies]
-pretty_assertions = "0.6.1"
-wasm-bindgen-test = "0.2"
-
 [dependencies.web-sys]
 version = "0.3.4"
 features = [
@@ -69,3 +65,14 @@ features = [
   'EventTarget',
   'MouseEvent',
   ]
+
+[features]
+default = ["console_error_panic_hook"]
+
+[dev-dependencies]
+pretty_assertions = "0.6.1"
+wasm-bindgen-test = "0.2"
+
+[profile.release]
+# Tell `rustc` to optimize for small code size.
+opt-level = "s"
