--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "minesweeper"
 version = "0.1.0"
 authors = ["João Paiva <jgpaiva@gmail.com>"]
 edition = "2018"
+description="This is an attempt at building a minesweeper solver. Right now it is just a complete console and WASM implementation of the game and has no solver."
+repository="https://github.com/jgpaiva/minesweeper"
+license="MIT"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
