--- a/docs/pkg/package.json
+++ b/docs/pkg/package.json
@@ -3,7 +3,13 @@
   "collaborators": [
     "João Paiva <jgpaiva@gmail.com>"
   ],
+  "description": "This is an attempt at building a minesweeper solver. Right now it is just a complete console and WASM implementation of the game and has no solver. It features a really simplistic robot solver that can only work for the most obvious cases.",
   "version": "0.1.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jgpaiva/minesweeper"
+  },
   "files": [
     "minesweeper_bg.wasm",
     "minesweeper.js",
