--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ members = [
 path = "lib_minesweeper"
 
 [dependencies]
-strum = "0.13"
-strum_macros = "0.13"
+strum = "0.24"
+strum_macros = "0.24"
 serde = "1"
 serde_derive = "1"
 
@@ -29,7 +29,8 @@ wasm-bindgen = "0.2.60"
 log = "0.4.8"
 
 js-sys = "0.3.32"
-gloo = "0.2.0"
+gloo = "0.3.0"
+gloo-timers = "0.2"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -38,10 +39,7 @@ gloo = "0.2.0"
 console_error_panic_hook = { version = "0.1.1", optional = true }
 
 [dependencies.yew]
-version = "0.18"
-features = [
-"web_sys"
-]
+version = "0.19"
 
 [dependencies.rand]
 version = "0.7.3"
@@ -77,7 +75,7 @@ features = [
 default = ["console_error_panic_hook"]
 
 [dev-dependencies]
-pretty_assertions = "0.6.1"
+pretty_assertions = "1.3.0"
 wasm-bindgen-test = "0.2"
 
 [profile.release]
