--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,8 @@ gloo-timers = "0.2"
 console_error_panic_hook = { version = "0.1.1", optional = true }
 
 [dependencies.yew]
-version = "0.19"
+version = "0.20"
+features = ["csr"]
 
 [dependencies.rand]
 version = "0.7.3"
