--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,12 +43,12 @@ version = "0.20"
 features = ["csr"]
 
 [dependencies.rand]
-version = "0.7.3"
+version = "0.8.5"
 features = ["log"]
 
 [dependencies.getrandom]
-version = "0.1.14"
-features = ["wasm-bindgen"]
+version = "0.2.8"
+features = ["js"]
 
 [dependencies.web-sys]
 version = "0.3.4"
